--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.1",
