--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "framer-motion": "^10.16.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.1",
@@ -30,6 +33,7 @@
     "@types/node": "^20.10.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/throttle-debounce": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
