--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.16.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.0.0",
     "throttle-debounce": "^5.0.0"
