--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@faker-js/faker": "^8.3.1",
     "framer-motion": "^10.16.9",
+    "immer": "^10.0.3",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-type-animation": "^3.2.0",
