--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.20.0",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.0.0",
     "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.1",
-    "@storybook/addon-interactions": "^7.6.1",
-    "@storybook/addon-links": "^7.6.1",
+    "@storybook/addon-essentials": "^7.6.3",
+    "@storybook/addon-interactions": "^7.6.3",
+    "@storybook/addon-links": "^7.6.3",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.6.1",
-    "@storybook/react": "^7.6.1",
-    "@storybook/react-vite": "^7.6.1",
-    "@storybook/test": "^7.6.1",
+    "@storybook/blocks": "^7.6.3",
+    "@storybook/react": "^7.6.3",
+    "@storybook/react-vite": "^7.6.3",
+    "@storybook/test": "^7.6.3",
     "@types/node": "^20.10.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -52,7 +54,8 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "storybook": "^7.6.1",
+    "storybook": "^7.6.3",
+    "storybook-addon-react-router-v6": "^2.0.10",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
