--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.48.2",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.0",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.0.0",
     "throttle-debounce": "^5.0.0"
@@ -54,6 +56,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "sass": "^1.69.5",
     "storybook": "^7.6.3",
     "storybook-addon-react-router-v6": "^2.0.10",
     "tailwindcss": "^3.3.5",
