--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@faker-js/faker": "^8.3.1",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.9",
     "immer": "^10.0.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.24.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -42,6 +44,7 @@
     "@storybook/test": "^7.6.3",
     "@types/node": "^20.10.1",
     "@types/react": "^18.2.37",
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.15",
     "@types/throttle-debounce": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
