--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@faker-js/faker": "^8.3.1",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.9",
     "immer": "^10.0.3",
