--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.9",
-    "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.24.0",
     "react-dnd": "^16.0.1",
@@ -37,7 +36,8 @@
     "react-type-animation": "^3.2.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
-    "throttle-debounce": "^5.0.0"
+    "throttle-debounce": "^5.0.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.3",
