--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@faker-js/faker": "^8.3.1",
     "@popperjs/core": "^2.11.8",
+    "@tanstack/react-query": "^5.12.2",
+    "@tanstack/react-query-devtools": "^5.12.2",
     "ag-grid-react": "^31.0.0",
+    "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.9",
+    "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.24.0",
     "react-dnd": "^16.0.1",
@@ -47,6 +51,7 @@
     "@storybook/react": "^7.6.3",
     "@storybook/react-vite": "^7.6.3",
     "@storybook/test": "^7.6.3",
+    "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/node": "^20.10.1",
     "@types/react": "^18.2.37",
     "@types/react-datepicker": "^4.19.3",
@@ -61,6 +66,8 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.0",
+    "msw": "^1.3.2",
+    "msw-storybook-addon": "^1.10.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
@@ -71,5 +78,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vite-plugin-svgr": "^4.2.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
