--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@faker-js/faker": "^8.3.1",
     "@popperjs/core": "^2.11.8",
+    "@storybook/preview-api": "^7.6.3",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.12.2",
+    "ag-grid-community": "^31.0.0",
     "ag-grid-react": "^31.0.0",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
@@ -69,6 +72,8 @@
     "msw": "^1.3.2",
     "msw-storybook-addon": "^1.10.0",
     "postcss": "^8.4.31",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^12.0.1",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "sass": "^1.69.5",
