--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "npm run build-storybook",
-  "devCommand": "npm run storybook",
-  "installCommand": "npm install",
+  "buildCommand": "pnpm build-storybook",
+  "devCommand": "pnpm storybook",
+  "installCommand": "pnpm install",
   "framework": null,
   "outputDirectory": "./storybook-static"
 }
