--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@storybook/preview-api": "^7.6.3",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.12.2",
+    "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.3",
     "ag-grid-community": "^31.0.0",
     "ag-grid-react": "^31.0.0",
@@ -45,6 +47,7 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "throttle-debounce": "^5.0.0",
+    "tui-color-picker": "^2.2.8",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
