--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "ag-grid-community": "^31.0.0",
     "ag-grid-react": "^31.0.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.9",
     "immer": "^10.0.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.24.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
