--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.9",
     "immer": "^10.0.3",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.24.0",
@@ -64,6 +65,7 @@
     "@storybook/test": "^7.6.3",
     "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/node": "^20.10.1",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18.2.37",
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.15",
