--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-popper": "^2.3.0",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
     "react-type-animation": "^3.2.0",
+    "recoil": "^0.7.7",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "throttle-debounce": "^5.0.0",
@@ -70,6 +72,7 @@
     "@types/react": "^18.2.37",
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.15",
+    "@types/react-modal": "^3.16.3",
     "@types/throttle-debounce": "^5.0.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
