--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "framer-motion": "^10.16.9",
     "immer": "^10.0.3",
     "quill": "^1.3.7",
