--- a/.prettierrc
+++ b/.prettierrc
@@ -11,7 +11,7 @@
   "singleAttributePerLine": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "useTabs": false,
   "plugins": ["prettier-plugin-tailwindcss"]
 }
