feat: tanstack table

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/preview-api": "^7.6.3",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.12.2",
+    "@tanstack/react-table": "^8.15.3",
     "@toast-ui/editor": "^3.2.2",
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.3",
@@ -32,6 +33,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "feather-icons": "^4.29.1",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^10.16.9",
@@ -45,6 +47,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.48.2",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
